--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <title>Manage Landing Page</title>
   </head>
   <body>
-    <h1 class="text-4xl">Hello world</h1>
+    <nav class="relative container mx-auto p-6">
+      <div class="flex items-center justify-between">
+        <div class="pt-2">
+          <img src="images/logo.svg" alt="" />
+        </div>
+        <div class="hidden space-x-6 md:flex">
+          <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Products</a>
+          <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+        </div>
+        <a
+          href=""
+          class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block"
+          >Get Sarted</a
+        >
+      </div>
+    </nav>
+    <section id="hero">
+      <div
+        class="container flex flex-col-reverse md:flex-row items-center px-6 mx-auto mt-10 space-y-0 md:space-y-0"
+      >
+        <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+          <h1
+            class="max-w-md text-4xl font-bold text-center md:text-5xl md:text-left"
+          >
+            Bring everyone together to build better products
+          </h1>
+          <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+            Manage makes it simple for rsoftware teams to plan day-to-day tasks
+            while keeping the larger goal in view.
+          </p>
+          <div class="flex justify-center md:justify-start">
+            <a
+              href=""
+              class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+              >Get Sarted</a
+            >
+          </div>
+        </div>
+        <div class="md:w-1/2">
+          <img src="images/illustration-intro.svg" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
