--- a/index.html
+++ b/index.html
@@ -67,7 +67,46 @@
             complexity. Our software is tailorr-made for modern digital teams.
           </p>
         </div>
-        
+        <div id="numberListContainer" class="flex flex-col space-y-8 md:w-1/2">
+          <div id="listItemOneContainer" class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <div id="headingBackgound" class="rounded-l-full bg-brightRedSupLight md:bg-transparent ">
+              <div id="headingContainer" class="flex items-center space-x-2"> 
+                <div id="numberField" class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">01</div>
+              <h3 class="text-base font-bold md:mb-4 md:hidden">Track company wide-progress</h3>
+              </div>
+            </div>
+            <div id="textContainer">
+              <h3 class="text-base hidden mb-4 text-lg font-bold md:block">Track company wide-progress</h3>
+            <p class="text-darkGrayishBlue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est obcaecati quod eos sequi eaque nobis accusantium voluptatum maxime harum, saepe nihil. Fugiat nostrum ipsam repellendus?</p>
+            </div>
+          </div>
+          <div id="listItemTwoContainer" class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <div id="headingBackgound" class="rounded-l-full bg-brightRedSupLight md:bg-transparent ">
+              <div id="headingContainer" class="flex items-center space-x-2"> 
+                <div id="numberField" class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">02</div>
+              <h3 class="text-base font-bold md:mb-4 md:hidden">Advanced built-in reports</h3>
+              </div>
+            </div>
+            <div id="textContainer">
+              <h3 class="text-base hidden mb-4 text-lg font-bold md:block">Advanced built-in reports</h3>
+            <p class="text-darkGrayishBlue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est obcaecati quod eos sequi eaque nobis accusantium voluptatum maxime harum, saepe nihil. Fugiat nostrum ipsam repellendus?</p>
+            </div>
+          </div>
+          <div id="listItemThreeContainer" class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <div id="headingBackgound" class="rounded-l-full bg-brightRedSupLight md:bg-transparent ">
+              <div id="headingContainer" class="flex items-center space-x-2"> 
+                <div id="numberField" class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">03</div>
+              <h3 class="text-base font-bold md:mb-4 md:hidden">Everything you need in one place</h3>
+              </div>
+            </div>
+            <div id="textContainer">
+              <h3 class="text-base hidden mb-4 text-lg font-bold md:block">Everything you need in one place</h3>
+            <p class="text-darkGrayishBlue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est obcaecati quod eos sequi eaque nobis accusantium voluptatum maxime harum, saepe nihil. Fugiat nostrum ipsam repellendus?</p>
+            </div>
+          </div>
+
+
+        </div>
     </section>
   </body>
 </html>
