--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a
           href=""
           class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block"
-          >Get Sarted</a
+          >Get Started</a
         >
       </div>
     </nav>
@@ -56,7 +56,7 @@
     </section>
     <section id="features">
       <div
-        class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row"
+        class="container flex flex-col px-4 mx-auto mt-10 mb-32 space-y-12 md:space-y-0 md:flex-row"
       >
         <div class="flex flex-col space-y-12 md:w-1/2">
           <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
@@ -104,9 +104,36 @@
             <p class="text-darkGrayishBlue">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est obcaecati quod eos sequi eaque nobis accusantium voluptatum maxime harum, saepe nihil. Fugiat nostrum ipsam repellendus?</p>
             </div>
           </div>
-
-
         </div>
+    </section>
+    <section id="testimonials">
+      <div class="max-w-6xl px-5 mx-auto text-center" id="container">
+        <h2 class="text-4xl font-bold text-center">What's different about Manage?</h2>
+        <div id="testimonialsBox" class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3" id="testimonialOne">
+            <img src="images/avatar-anisha.png" class="w-16 -mt-14" alt="">
+            <h5 class="text-lg font-bold">Anisha Li</h5>
+            <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3" id="testimonialTwo">
+            <img src="images/avatar-ali.png" class="w-16 -mt-14" alt="">
+            <h5 class="text-lg font-bold">Ali Bravo</h5>
+            <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3" id="testimonialThree">
+            <img src="images/avatar-richard.png" class="w-16 -mt-14" alt="">
+            <h5 class="text-lg font-bold">Richard Watts</h5>
+            <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+        <div class="my-16">
+          <a
+              href=""
+              class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+              >Get Started</a
+            >
+        </div>
+      </div>
     </section>
   </body>
 </html>
