--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block"
           >Get Started</a
         >
+        
       </div>
     </nav>
     <section id="hero">
@@ -147,5 +148,46 @@
         </div>
       </div>
     </section>
+    <footer class="bg-veryDarkBlue">
+      <div id="container" class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+        <div class="max-auto my-6 text-center text-white md:hidden">
+          Copyright &copy; 22, All Right Preserved
+        </div>
+        <div id="logo&SocialLInks" class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+          <div>
+            <img src="images/logo-white.svg" alt="" class="h-8">
+          </div>
+          <div id="socialLinksBox" class="flex justify-center space-x-4 p-8">
+            <a href="#"><img src="images/icon-facebook.svg" alt="" class="h-8"></a>
+            <a href="#"><img src="images/icon-youtube.svg" alt="" class="h-8"></a>
+            <a href="#"><img src="images/icon-twitter.svg" alt="" class="h-8"></a>
+            <a href="#"><img src="images/icon-pinterest.svg" alt="" class="h-8"></a>
+            <a href="#"><img src="images/icon-instagram.svg" alt="" class="h-8"></a>
+          </div>
+        </div>
+        <div id="LisContainer" class="flex justify-around space-x-32">
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Home</a>
+            <a href="#" class="hover:text-brightRed">Pricing</a>
+            <a href="#" class="hover:text-brightRed">Products</a>
+            <a href="#" class="hover:text-brightRed">About</a>
+          </div>
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Careers</a>
+            <a href="#" class="hover:text-brightRed">Community</a>
+            <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+          </div>
+        </div>
+        <div id="input" class="flex flex-col items-center">
+          <div class="flex space-x-3">
+            <form action="">
+              <input type="text" class="flex-1 px-4 rounded-full p-1 focus:outline:none" placeholder="Updates in your inbox">
+              <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg:brightRedLight focus:outline-none">Go</button>
+            </form>
+          </div>
+          <div class="hidden text-white md:block">Copyright &copy; 22, All Right Preserved</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
