--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
           class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block"
           >Get Started</a
         >
-        
+        <button class="block hamburger md:hidden focus:outline-none" id="menuBtn">
+          <span class="block hamburger-top"></span>
+          <span class="block hamburger-middle"></span>
+          <span class="block hamburger-bottom"></span>
+        </button>
+      </div>
+      <div class="md:hidden">
+        <div id="menu" class="absolute flex flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:selff-center left-6 right-6 drop-shadow-md">
+          <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Products</a>
+          <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Community</a>
+        </div>
       </div>
     </nav>
     <section id="hero">
@@ -189,5 +202,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
