--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </button>
       </div>
       <div class="md:hidden">
-        <div id="menu" class="absolute flex flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:selff-center left-6 right-6 drop-shadow-md">
+        <div id="menu" class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:selff-center left-6 right-6 drop-shadow-md">
           <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
           <a href="#" class="hover:text-darkGrayishBlue">Products</a>
           <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
@@ -202,6 +202,16 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script>
+      const btn = document.querySelector("#menuBtn");
+      const nav = document.querySelector("#menu");
+
+        btn.addEventListener("click", () => {
+          btn.classList.toggle("open");
+          nav.classList.toggle("flex");
+          nav.classList.toggle("hidden")
+        });
+
+    </script>
   </body>
 </html>
