--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="relative container mx-auto p-6">
       <div class="flex items-center justify-between">
         <div class="pt-2">
-          <img src="images/logo.svg" alt="" />
+          <img src="images/logo.svg" alt="Manage logo" />
         </div>
         <div class="hidden space-x-6 md:flex">
           <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="md:w-1/2">
-          <img src="images/illustration-intro.svg" />
+          <img src="images/illustration-intro.svg" alt="The best software for companies" />
         </div>
       </div>
     </section>
@@ -125,17 +125,17 @@
         <h2 class="text-4xl font-bold text-center">What's different about Manage?</h2>
         <div id="testimonialsBox" class="flex flex-col mt-24 md:flex-row md:space-x-6">
           <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3" id="testimonialOne">
-            <img src="images/avatar-anisha.png" class="w-16 -mt-14" alt="">
+            <img src="images/avatar-anisha.png" class="w-16 -mt-14" alt="Anisha Li">
             <h5 class="text-lg font-bold">Anisha Li</h5>
             <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3" id="testimonialTwo">
-            <img src="images/avatar-ali.png" class="w-16 -mt-14" alt="">
+            <img src="images/avatar-ali.png" class="w-16 -mt-14" alt="Ali Bravo">
             <h5 class="text-lg font-bold">Ali Bravo</h5>
             <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3" id="testimonialThree">
-            <img src="images/avatar-richard.png" class="w-16 -mt-14" alt="">
+            <img src="images/avatar-richard.png" class="w-16 -mt-14" alt="Richard Watts">
             <h5 class="text-lg font-bold">Richard Watts</h5>
             <p class="text-sm text-grayishBlue">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
@@ -168,7 +168,7 @@
         </div>
         <div id="logo&SocialLInks" class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
           <div>
-            <img src="images/logo-white.svg" alt="" class="h-8">
+            <img src="images/logo-white.svg" alt="Manage Logo" class="h-8">
           </div>
           <div id="socialLinksBox" class="flex justify-center space-x-4 p-8">
             <a href="#"><img src="images/icon-facebook.svg" alt="" class="h-8"></a>
